@@ -1,3 +1,15 @@
+2007-02-16  Benno Schulenberg  <bensberg-at-justemail-dot-net>
+
+	* unichrome/via_accel.c: (viaSetClippingRectangle),
+	(viaAccelSolidHelper), (viaAccelCopyHelper),
+	(viaSubsequentMono8x8PatternFillRect),
+	(viaSubsequentColor8x8PatternFillRect),
+	(viaSubsequentSolidTwoPointLine), (viaSubsequentSolidHorVertLine):
+
+	Limit x value to sixteen bits.  Fixes a rendering glitch reported
+	by Marg Huijgen <mark-dot-sf-dot-net-at-huijgen-dot-tk>; solution
+	found by Thomas.
+
 2007-02-10  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
 	
 	* unichrome/via_accel.c: (viaFlushDRIEnabled),
